@@ -1,6 +1,13 @@
 
 2007-05-22  Benno Schulenberg  <benno@vertaalt.nl>
 
+	* bin/make-maintain, bin/po-expire, bin/po-matrix, bin/postats-data,
+	doc/files.all, doc/translators.all, lib/localweb.py, lib/registry.py,
+	tools/tp_mirror.py: Change directory names: domains/POT -> POT-files,
+	teams/PO -> PO-files, and maint -> latest-POs.
+
+2007-05-22  Benno Schulenberg  <benno@vertaalt.nl>
+
 	* lib/registry: Put still required stuff back.
 
 2007-05-22  Benno Schulenberg  <benno@vertaalt.nl>
